# dfm-toolkit

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
etc/: gramma.md  grammar.md  lexer.md  token_matcher_comment.uxf  token_matcher_float.uxf  token_matcher_float_datetime.uxf  token_matcher_hex.uxf  token_matcher_integer.uxf  token_matcher_integer_datetime.uxf  token_matcher_non_special.uxf  token_matcher_string.uxf  token_matcher_string_char.uxf  token_matcher_token.uxf
etc/dfm/exp/lexer/: basic.token  basic.weed.token  basic_array.token  basic_array.weed.token  basic_array_mult.token  basic_array_mult.weed.token  basic_binary.token  basic_binary.weed.token  basic_bit.token  basic_bit.weed.token  basic_comment.token  basic_comment2.token  basic_comment2.weed.token  basic_constant.token  basic_constant.weed.token  basic_datetime.token  basic_datetime.weed.token  basic_enc_ascii.token  basic_enc_ascii.weed.token  basic_enc_ascii_cr.token  basic_enc_ascii_cr.weed.token  basic_enc_cp1252.token  (+54 more)
etc/dfm/in/: basic.dfm  basic_array.dfm  basic_array_mult.dfm  basic_binary.dfm  basic_bit.dfm  basic_comment.dfm  basic_comment2.dfm  basic_constant.dfm  basic_datetime.dfm  basic_enc_ascii.dfm  basic_enc_ascii_cr.dfm  basic_enc_ascii_crlf.dfm  basic_enc_ascii_lf.dfm  basic_enc_cp1252.dfm  basic_enc_iso8859.dfm  basic_enc_utf16be.dfm  basic_enc_utf16be_bom.dfm  basic_enc_utf16le.dfm  basic_enc_utf16le_bom.dfm  basic_enc_utf32be.dfm  basic_enc_utf32be_bom.dfm  basic_enc_utf32le.dfm  basic_enc_utf32le_bom.dfm  basic_enc_utf8.dfm  basic_enc_utf8_bom.dfm  basic_float.dfm  basic_format.dfm  basic_inline_object.dfm  basic_int.dfm  basic_many_newline.dfm  basic_most.dfm  basic_non_ascii_identifier.dfm  basic_obj.dfm  basic_obj_all.dfm  basic_obj_anonym.dfm  basic_obj_idx_operator.dfm  basic_obj_inherited.dfm  basic_obj_inline.dfm  basic_obj_namespace.dfm  basic_obj_simple.dfm  (+5 more)
projects/: CMakeLists.txt
projects/dfm-find/: CMakeLists.txt
projects/dfm-find/src/: dfm-find.main.cpp
projects/dfm-formatter/: CMakeLists.txt
projects/dfm-formatter/src/: dfm-formatter.main.cpp
projects/dfm-image-export/: CMakeLists.txt
projects/dfm-image-export/src/: dfm-image-export.main.cpp
projects/dfm-tokens/: CMakeLists.txt
projects/dfm-tokens/src/: dfm-tokens.main.cpp
projects/libdfm/: CMakeLists.txt
projects/libdfm/include/dfm/: license.h
projects/libdfm/include/dfm/ast/: load.h  node.h  node_dfm.h  node_object.h  node_parameter.h  node_value.h  node_value_array.h  node_value_array_item.h  node_value_binary.h  node_value_bit.h  node_value_constant.h  node_value_datetime.h  node_value_float.h  node_value_inline_object.h  node_value_integer.h  node_value_set.h  node_value_string.h  parse.h  parse_error.h
projects/libdfm/include/dfm/lexer/: lex.h  token.h  weed.h
projects/libdfm/include/dfm/pt/: node.h  parse.h  parse_error.h  rule.h  weed.h
projects/libdfm/include/dfm/utils/: bits.h  ci_compare.h  ci_string.h  escape.h  iconv.h  io.h  replace.h  unescape.h
projects/libdfm/include/dfm/utils/form/: envelope.h  find.h  identifier.h
projects/libdfm/include/dfm/utils/image/: bmp32.h
projects/libdfm/src/dfm/ast/: load.cpp  node.cpp  node_dfm.cpp  node_object.cpp  node_parameter.cpp  node_value_array.cpp  node_value_array_item.cpp  node_value_binary.cpp  node_value_bit.cpp  node_value_constant.cpp  node_value_datetime.cpp  node_value_float.cpp  node_value_inline_object.cpp  node_value_integer.cpp  node_value_set.cpp  node_value_string.cpp  parse_error.cpp
projects/libdfm/src/dfm/ast/parse/: dfm.cpp  helper.cpp  helper.h  obj.cpp  parameter.cpp  values.cpp
projects/libdfm/src/dfm/lexer/: lex.cpp  token.cpp  token_matcher.cpp  token_matcher.h  weed.cpp
projects/libdfm/src/dfm/pt/: node.cpp  parse_error.cpp  weed.cpp
projects/libdfm/src/dfm/pt/parse/: any_chars.cpp  delphi_identifier.cpp  delphi_name.cpp  dfm.cpp  helper.cpp  helper.h  hex_code_string.cpp  hws.cpp  nl.cpp  obj.cpp  obj_name.cpp  obj_param.cpp  obj_param_name.cpp  obj_params.cpp  obj_type.cpp  token.cpp  value.cpp  value_array.cpp  value_array_item.cpp  value_array_item_param.cpp  value_array_item_param_name.cpp  value_array_items.cpp  value_binary.cpp  value_bit.cpp  value_constant.cpp  value_datetime.cpp  value_float.cpp  value_inline_object.cpp  value_integer.cpp  value_set.cpp  value_set_value.cpp  value_set_values.cpp  value_string.cpp  value_string_element.cpp  value_string_element_char.cpp  value_string_element_string.cpp  ws.cpp
projects/libdfm/src/dfm/utils/: bits.cpp  ci_compare.cpp  debug.cpp  debug.h  iconv.cpp  io.cpp  simple_nfa.h
projects/libdfm/src/dfm/utils/form/: envelope.cpp  find.cpp  identifier.cpp
projects/libdfm/src/dfm/utils/image/: bmp32.cpp
projects/libdfm/test/: CMakeLists.txt  lexer_lex.cpp  lexer_weed.cpp  pt_pp.cpp  pt_weed_pp.cpp  utils_bits.cpp  utils_ci_string_cmp.cpp
(+81 files in other folders)
